[LOG4J2-2763] Update dependencies.
 * Apache Flume 1.7.0 -> 1.9.0
 * HSQLDB 2.3.5 -> 2.5.0
 * XMLUnit 2.5.1 -> 2.6.3
 * Remove support for Java 7 builds.